後の衝突判定実装時に視点がブロックに埋まらないようにするためnearを0.5に変更

--- a/OpenGL3D_2023_03.md
+++ b/OpenGL3D_2023_03.md
@@ -701,9 +701,22 @@ void glViewport(描画範囲の左下Xの座標, 描画範囲の左下のY座標
 
 つまり、カメラの回転を反映するには、逆方向に回転させる必要があるのです。
 
-さて、カメラの位置や回転を変更しないと本当にビュー座標系へ変換できているのか分かりません。そこで、キー入力によってカメラを動かせるようにしましょう。
+さて、カメラの位置や回転を変更しないと本当にビュー座標系へ変換できているのか分かりません。そこで、キー入力によってカメラを動かせるようにしましょう。キー入力の判定には`glfwGetKey`(ジーエルエフダブリュー・ゲット・キー)関数を使います。
 
-キー入力を判定するには`glfwGetKey`(ジーエルエフダブリュー・ゲット・キー)関数を使います。box0を回転させるプログラムの下に、次のプログラムを追加してください。
+<p><code class="tnmai_code"><strong>【書式】</strong><br>
+int glfwGetKey(GLFWウィンドウオブジェクトのアドレス, キー番号);
+</code></p>
+
+キー番号には、`glfw3.h`ヘッダに定義されている`GLFW_KEY_????`というマクロ定数を指定します。
+
+この関数は、「キー番号」で指定したキーが押されている場合は`GLFW_PRESS`(ジーエルエフダブリュー・プレス)、押されていない場合は`GLFW_RELEASE`(ジーエルエフダブリュー・リリース)を返します。
+
+| 定数 | 意味 |
+|:----:|:-----|
+| <ruby>GLFW_RELEASE<rt>ジーエルエフダブリュー・リリース</rt></ruby> | キーは押されていない |
+| <ruby>GLFW_PRESS<rt>ジーエルエフダブリュー・プレス</rt></ruby> | キーが押されている |
+
+box0を回転させるプログラムの下に、次のプログラムを追加してください。
 
 ```diff
    while (!glfwWindowShouldClose(window)) {
@@ -729,12 +742,6 @@ void glViewport(描画範囲の左下Xの座標, 描画範囲の左下のY座標
      // バックバッファをクリア
      glClearColor(0.3f, 0.6f, 0.9f, 1.0f);
 ```
-
-<p><code class="tnmai_code"><strong>【書式】</strong><br>
-int glfwGetKey(GLFWウィンドウオブジェクトのアドレス, 調べたいキーの番号);
-</code></p>
-
-`glfwGetKey`関数は、「キー番号」で指定したキーが押されている場合は`GLFW_PRESS`(ジーエルエフダブリュー・プレス)、押されていない場合は`GLFW_RELEASE`(ジーエルエフダブリュー・リリース)を返します。
 
 プログラムが書けたらビルドして実行してください。A, DキーでカメラをX軸方向に移動、EQキーでY軸回転できます。
 
@@ -1001,7 +1008,7 @@ gl_Position.z = -gl_Position.z * B + A
    gl_Position.x /= aspectRatio;
 +
 +  // 深度値の計算結果が-1～+1になるようなパラメータA, Bを計算
-+  const float near = 1;
++  const float near = 0.5;
 +  const float far = 1000;
 +  const float A = -2 * far * near / (far - near);
 +  const float B = (far + near) / (far - near);
