構造化の必要性の記述を詳しくする

--- a/OpenGL3D_2023_04.md
+++ b/OpenGL3D_2023_04.md
@@ -5,25 +5,24 @@
 ## 習得目標
 
 * 個々のプログラムが持つ役割の違いを見分けて構造化できる。
-* キー状態によって処理を分けることができる。
-* CSVファイルを配列に読み込むことができる。
+* エンジンがゲームオブジェクトを管理し、ゲームオブジェクトがコンポーネントを管理するという階層構造を理解する。
+* 新規にコンポーネントを作成し、ゲームオブジェクトに割り当てることができる。
+* プライベートメンバを利用した「カプセル化」について説明できる。
 
 ## 1. プログラムの構造化
 
 ### 1.1 プログラムを構造化する
 
-ここまでは、OpenGLの機能の説明に集中するために、ほぼすべてのプログラムを`main`関数に書いてきました。プログラムの読みやすさを維持するために、「構造化」を実行する頃合いでしょう。
+ここまでは、OpenGLの機能の説明に集中するために、ほぼすべてのプログラムを`main`関数に書いてきました。しかし、今後も多くのプログラムを追加することを考えると、全て`main`関数に書いていくのは限界があります。
 
-「構造化」とは、
+今後もプログラムの読みやすさを維持するには、何らかの対策が必要です。ここで登場するのが「構造化」という技法です。ひとくちに「構造化」といってもいろいろな手法がありますが、本テキストでは以下の考え方でプログラムを構造化していきます。
 
 >1. プログラムのすべての構成要素を洗い出し、正しさ(意図したとおりに動くこと)を容易に証明できる程度に小さな単位へと分解する(分割、モジュール化)。
 >2. 分解した構成要素を階層化して、プログラム全体の正しさを段階的に証明できるようにする(可読性、テスト容易性)。
 
-という技法です。C++言語のプログラムを構造化するには、関数、構造体、クラスなどを使います。
+C++言語のプログラムを構造化するには、関数、構造体、クラスなどを使います。この「構造化」をゲームプログラムに活用するために、まずゲームプラグラムの構成を考えてみます。一般的なゲームプログラムは、以下の2つの部分から構成されます。
 
-この「構造化」をゲームプログラムに活用するために、まずゲームプラグラムの構成を考えてみます。一般的なゲームプログラムは、以下の2つの部分から構成されます。
-
->* どのゲームでも必要な要素(入出力の制御、画面の描画、ゲームオブジェクトの管理など)
+>* どのゲームでも必要な要素(入出力制御、画面描画、ゲームオブジェクト管理など)
 >* ゲーム固有の要素(プレイヤーの操作方法、敵の行動、ゲームルールの管理など)
 
 「どのゲームでの必要な要素」は、多くのゲームエンジンで`Engine`(エンジン)または`GameEngine`クラスとして定義されます。本テキストでは`Engine`という名前のクラスを定義することにします。
@@ -71,9 +70,9 @@
 >| +---- ゲームオブジェクトの削除
 >|
 >+-+-- アセット管理
->  +---- モデルの追加
->  +---- テクスチャの追加
->  +---- シェーダの追加
+>   +---- モデルの追加
+>   +---- テクスチャの追加
+>   +---- シェーダの追加
 >```
 
 上の表では省略していますが、実際にはゲームループ以外の要素にも「初期化」が必要です。どんな要素も、最初に最低限のパラメータを設定しなくては使えないからです。
