テクスチャイメージユニットの図を追加. 課題04を追加.

--- a/OpenGL3D_2023_02.md
+++ b/OpenGL3D_2023_02.md
@@ -728,7 +728,7 @@ void glProgramUniform1f(プログラムオブジェクトの管理番号,<br>
 
 次のURLから`box.png`という画像ファイルをダウンロードしてください(Downloadボタンを`右`クリックして、メニューから「名前をつけてリンク先を保存」を選ぶ)。
 
->`https://github.com/tn-mai/OpenGL3D2023/blob/master/res/box.png`
+>`https://github.com/tn-mai/OpenGL3D2023/blob/main/res/box.png`
 
 次に、ダウンロードした`box.png`を、Visual Studioの編集ウィンドウにドラッグ&ドロップしてください。
 
@@ -955,9 +955,13 @@ void glBindTextures(割り当て開始インデックス, 割り当てる個数,
 
 「テクスチャ・イメージ・ユニット」は「GPUのテクスチャ割り当てスロット」のことです。ユニット数はGPUによって異なりますが、OpenGLの仕様では最少でも16個はあることになっています。
 
+<p align="center">
+<img src="images/02_texture_image_unit.png" width="50%" />
+</p>
+
 GPUにテクスチャを差し込むスロットが16個空いていて、`glBindTextures`はその穴にテクスチャオブジェクトを差し込む、というようなイメージです。
 
-上記のプログラムでは、「`0`番ユニットから`1`個テクスチャを割り当てる」ように設定しています。
+上記のプログラムでは、「`tex`で指定された`1`個テクスチャを`0`番ユニットに割り当てる」ように設定しています。
 
 次に、ユニット割り当てたテクスチャを使うようにシェーダを修正します。
 `standard.frag`を開き、プログラムを次のように変更してください。
@@ -1032,13 +1036,14 @@ vec4 texture(サンプラ変数, テクスチャ座標);
      {-0.2f,-0.2f, 0}, { 0.2f,-0.2f, 0}, { 0.0f, 0.2f, 0},
 ```
 
-`vec2`(ベク・ツー)と`vec3`(ベク・スリー)はそれぞれ2要素、3要素を表す構造体です。`vec`は`vector`(ベクトル)の短縮形です。
+`vec2`(ベク・ツー)と`vec3`(ベク・スリー)はそれぞれ2要素、3要素を表す構造体です。
+`vec`は`vector`(ベクトル)の短縮形です。
 
-頂点データを構造体として定義することで、「頂点座標」は`position`(ポジション)、「テクスチャ座標」は`texcoord`(テックスコード)で表せるようになりました。
+頂点データを構造体として定義することで、「頂点座標」は`position`(ポジション)、「テクスチャ座標」は`texcoord`(テックスコード)のように、1個の変数として定義できるようになりました。
 
-
->**【もしも構造体がなかったら】**<br>
->構造体のない古いプログラミング言語では、プログラマが番号を表す定数を定義することで対応していました。
+>**【配列より構造体を使おう】**<br>
+>構造体型の変数は`=`で代入できます。配列の場合は要素をひとつずつ代入するか、
+>`std::copy_n`などの関数を使わなくてはなりません。また、構造体ならメンバ変数を名前で使い分けられます。配列はX, Y, Zを添え字で表す必要があるため分かりにくいです。
 
 それでは、頂点データにテクスチャ座標を追加しましょう。現在、頂点データ配列には11個の頂点が定義されています。ただ、11個もテクスチャ座標を追加するのは少し面倒です。
 
@@ -1249,8 +1254,8 @@ size_t offsetof(構造体名, メンバ名);
 指定した色をピクセルに反映するには、以下の3つの方法が考えられます。
 
 >1. 「色を表すユニフォーム変数」をフラグメントシェーダに追加し、直接ピクセルに反映する。
->2. 「色を表すユニフォーム変数」を頂点シェーダに追加し、頂点シェーダの`outColor`からフラグメントシェーダの`inColor`に送る。
->3. 頂点データに「色要素」を追加し、頂点シェーダの`outColor`からフラグメントシェーダの`inColor`に送る。
+>2. 「色を表すユニフォーム変数」を頂点シェーダに追加し、頂点シェーダの<br>`outColor`からフラグメントシェーダの`inColor`に送る。
+>3. 頂点データに「色要素」を追加し、頂点シェーダの`outColor`からフラグメント<br>シェーダの`inColor`に送る。
 
 今回は、いちばん簡単な1の方法を使います。
 
@@ -1369,10 +1374,19 @@ void glProgramUniform4fv(プログラムオブジェクトの管理番号,<br>
 <img src="images/02_result_7.jpg" width="45%" />
 </p>
 
+<pre class="tnmai_assignment">
+<strong>【課題04】</strong>
+[この課題は暇な人向けです。少し難しいので、分からなければ飛ばしてください。テクスチャ座標の扱い方についての練習問題になります。]
+
+シェーダでテクスチャ座標を操作すると、テクスチャとして表示される部分を変更したり、テクスチャが流れるような効果を与えられます。
+よく使われるのは水面や溶岩などの表現です。タイマーなどを利用して座標を変化させることで、図形を変更することなく水の流れを再現できます。
+
+それでは、課題の内容を説明します。水面テクスチャを用意して箱テクスチャを置き換え、<code>timer</code>ユニフォーム変数を復活させて、上から下に流れる水面を表現しなさい。
+</pre>
 
 >**【3章のまとめ】**
 >
->* 画像をTGAファイルに変換するには、Visual Studioで画像ファイルを開き「ファイル→名前をつけて～を保存」を選択する。
->* テクスチャを表示するには`glBindTextures`関数を使って、テクスチャを「テクスチャ・イメージ・ユニット」に割り当てる。
+>* 画像をTGAファイルに変換するには、Visual Studioで画像ファイルを開き<br>「ファイル→名前をつけて～を保存」を選択する。
+>* テクスチャを表示するには`glBindTextures`関数を使って、テクスチャを「テクス<br>チャ・イメージ・ユニット」に割り当てる。
 >* テクスチャ座標は`(0, 0)`から`(1, 1)`の範囲で指定する。
->* アルファブレンドを有効にするには、`GL_BLEND`を有効にして、`glBlendEquation`, `glBendFunc`関数を使ってブレンド式を指定する。
+>* アルファブレンドを有効にするには、`GL_BLEND`を有効にして`glBlendEquation`と<br>`glBendFunc`関数を使ってブレンド式を指定する。
