ビルドエラーに対処

--- a/OpenGL3D_2023_02.md
+++ b/OpenGL3D_2023_02.md
@@ -830,13 +830,9 @@ void glCreateTextures(テクスチャの種類, 作成する個数,<br>
 
 TGAファイルを読み込むには`ifstream`クラスを使います。手順はシェーダのときと同じです。
 
-ただし、TGAファイルの先頭18バイトには「TGAヘッダ」と呼ばれるデータ領域があります。画像データはTGAヘッダの後ろにあるので、先頭の18バイトを読み飛ばす必要があります。
+TGAファイルの先頭18バイトには「TGAヘッダ」と呼ばれるデータ領域があります。TGAヘッダには画像のサイズなどの情報が書き込まれれています。画像データはTGAヘッダの後ろにあります。
 
-データを読み飛ばすには`ignore`(イグノア, 「無視する」という意味)関数を使います。
-
-<p><code class="tnmai_code"><strong>【書式】</strong><br>
-ifstream& ifstream::ignore(読み飛ばすバイト数);
-</code></p>
+画像の幅`width`(ウィス)はヘッダの12～13バイト目、高さ`height`(ハイト)は14～15バイト目に記録されています。16ビットのデータなので、元の値を復元するには上位8ビットを256倍して合成する必要があります。
 
 `glTextureStorage2D`(ジーエル・テクスチャ・ストレージ・ツーディ)関数は、画像データのコピー先であるGPUメモリ領域を確保します。
 
@@ -1167,7 +1163,7 @@ void glVertexAttribPointer(頂点属性配列のインデックス, データの
 +
 +  // 1番目の頂点属性を設定
 +  glVertexAttribPointer(1, 2, GL_FLOAT, GL_FALSE, sizeof(Vertex),
-+    reinterpret_cast<const void*>(offsetof(Vertex, u)));
++    reinterpret_cast<const void*>(offsetof(Vertex, texcoord)));
 
    // テクスチャを作成
    GLuint tex = 0; // テクスチャの管理番号
