課題02を意味のある内容に修正

--- a/OpenGL3D_2023_03.md
+++ b/OpenGL3D_2023_03.md
@@ -147,7 +147,7 @@ GLSLのベクトル型は、`float`型と同様に四則演算が可能です。
 
 <pre class="tnmai_assignment">
 <strong>【課題02】</strong>
-図形の座標をX=-0.6f, Y=-0.6fに変更しなさい。
+図形の座標を変更し、画面の好きな位置に表示しなさい。
 </pre>
 
 ### 1.3 図形を複数表示する
