不要なコメントを削除

--- a/OpenGL3D_2023_06.md
+++ b/OpenGL3D_2023_06.md
@@ -619,7 +619,8 @@ iterator remove_if(調査範囲の先頭, 調査範囲の終端, 振り分け条
 ```diff
    float squareSize = 2;  // マップの1マスの大きさ
    float squareScale = squareSize / 2; // 壁・床の拡大率
-+  std::shared_ptr<PlayerComponent> playerComponent;  // プレイヤーが操作するオブジェクト
++
++  std::shared_ptr<PlayerComponent> playerComponent;
  };
 
  #endif // MAINGAMESCENE_H_INCLUDED
