RemoveDestroyedComponent関数を呼び出していなかったので呼び出しコードを追加

--- a/OpenGL3D_2023_04.md
+++ b/OpenGL3D_2023_04.md
@@ -1073,6 +1073,7 @@ nullptrになった要素を削除するには、`erase`を呼び出す必要が
 +  for (auto& e : components) {
 +    e->Update(deltaTime);
 +  }
++  RemoveDestroyedComponent();
 +}
 +
 +/**
