Vertex構造体をMain.cppから削除する手順を追記

--- a/OpenGL3D_2023_05.md
+++ b/OpenGL3D_2023_05.md
@@ -671,15 +671,6 @@ OpenGLで多数の図形を扱う方法は主に2つあります。
 +#include "VecMath.h"
 +
 +/**
-+* 頂点データ形式
-+*/
-+struct Vertex
-+{
-+  vec3 position; // 頂点座標
-+  vec2 texcoord; // テクスチャ座標
-+};
-+
-+/**
 +* 描画パラメータ
 +*/
 +struct DrawParams
@@ -693,9 +684,7 @@ OpenGLで多数の図形を扱う方法は主に2つあります。
 +#endif // MESH_H_INCLUDED
 ```
 
-ここで定義している`Vertex`構造体は、`Engine.cpp`に定義した同名の構造体と全く同じです。他のファイルから参照できるように、描画パラメータと同じヘッダファイルに定義し直すことにしました。
-
-描画パラメータは`DrawParams`(ドロー・パラムス)という名前にしました。`Params`は`Parameter`(パラメータ)の複数形を短縮した名前です。
+描画パラメータの名前は`DrawParams`(ドロー・パラムス)としました。`Params`は`Parameter`(パラメータ)の複数形を短縮した名前です。
 
 `DrawParams`のメンバには、`glDrawElementsInstancedBaseVertex`(ジーエル・ドロー・エレメンツ・インスタンスド・ベース・バーテックス)関数の引数をほぼそのまま使っています。
 
@@ -710,6 +699,58 @@ void glDrawElementsInstancedBaseVertex(基本図形の種類, インデックス
 ベースバーテックスを使うと、頂点配列内の好きな頂点データを「インデックス0番」にすることができます。この機能は、ひとつのVBOに大量の図形を格納する場合に役立ちます。
 
 >`indices`は「インディシズ」と読みます。これは`index`(インデックス)の複数形です。`idnex`の複数形には`indexes`(インデクシス)もあって、厳密には使い分けがあるらしいのですが、まあ、どちらでも好きな方を使えばよいです。
+
+これで描画パラメータの定義は完了ですが、ついでに`Engine.cpp`にある`Vertex`構造体を`Mesh.h`に移動しておきます。理由は、今後`Engine.cpp`以外のファイルから`Vertex`構造体を参照する可能性があるからです。
+
+`Engine.cpp`を開き、`Initialize`メンバ関数にある`Vertex`構造体の定義を切り取ってください。
+
+```diff
+   glAttachShader(prog3D, fs);
+   glLinkProgram(prog3D);
+
+   // 頂点データをGPUメモリにコピー
+-  struct Vertex {
+-    vec3 position; // 頂点座標
+-    vec2 texcoord; // テクスチャ座標
+-  };
+   const Vertex vertexData[] = {
+     // +Z(手前の面)
+```
+
+再び`Mesh.h`を開き、切り取った`Vertex`構造体を貼り付けてください。
+
+```diff
+ #define MESH_H_INCLUDED
+ #include "glad/glad.h"
+ #include "VecMath.h"
++
++struct Vertex {
++  vec3 position; // 頂点座標
++  vec2 texcoord; // テクスチャ座標
++};
+
+ /**
+ * 描画パラメータ
+```
+
+移動した構造体に説明コメントを追加します。`Vertex`構造体の定義に、次のプログラムを追加してください。
+
+```diff
+ #define MESH_H_INCLUDED
+ #include "glad/glad.h"
+ #include "VecMath.h"
++
++/**
++* 頂点データ形式
++*/
+-struct Vertex {
++struct Vertex
++{
+   vec3 position; // 頂点座標
+   vec2 texcoord; // テクスチャ座標
+```
+
+これで、`Mesh.h`をインクルードすれば`Vertex`構造体が使えるようになります。
 
 ### 3.2 図形データをGPUメモリにコピーする
 
