HandleWorldColliderCollision関数のエラーを修正するコードを追記

--- a/OpenGL3D_2023_06.md
+++ b/OpenGL3D_2023_06.md
@@ -541,6 +541,20 @@ iterator remove_if(調査範囲の先頭, 調査範囲の終端, 振り分け条
 
 なお、貼り付けただけだとインデントが大きくずれています。Ctrl+Kを押し、次にCtrl+Dを押して「ドキュメントのフォーマット」を実行すると、インデントが修正されます。
 
+次にエラーを修正します。for文を次のように変更してください。
+
+```diff
+ void Engine::HandleWorldColliderCollision(WorldCollider* a, WorldCollider* b)
+ {
+   // コライダー単位の衝突判定
+-  for (const auto& colA : a->colliders) {
+-    for (const auto& colB : b->colliders) {
++  for (const auto& colA : *a) {
++    for (const auto& colB : *b) {
+       // スタティックコライダー同士は衝突しない
+       if (colA.origin->isStatic && colB.origin->isStatic) {
+```
+
 続いて、「ゲームオブジェクトが破棄された場合にループを終了する」処理を追加しましょう。イベント関数を呼び出すプログラムの下に、次のプログラムを追加してください。
 
 ```diff
