今後の予定を消す

--- a/OpenGL3D_2023_09.md
+++ b/OpenGL3D_2023_09.md
@@ -1,17 +1,6 @@
 [OpenGL 3D 2023 第09回]
 
-とりあえず、Unityの3Dビギナー向けサンプル記事をベースに3D迷路ステルス脱出ゲームを作ることにする
-
-[x] 床と壁のテクスチャを変えられるようにする
-[x] 2Dマップタイル単位の衝突判定
-[ ] ゴール判定
-[ ] タイム測定
-[x] カメラ操作をMainGameSceneに移す(プレイヤーオブジェクトを作る？)
-[ ] 敵
-[ ] タイトル
-[ ] ゲームクリア
-
-# 
+# 明かりをつけましょ迷宮に
 
 ## 習得目標
 
