OBJファイルのフォルダを変更

--- a/OpenGL3D_2023_08.md
+++ b/OpenGL3D_2023_08.md
@@ -1596,7 +1596,7 @@ pair&lt;iterator, bool&gt; emplace(キー, データ);
 <strong>【課題05】</strong>
 以下のURLから<code>skull_highpoly.obj</code>(スカル・ハイポリ・オブジェ)というOBJファイルをダウンロードして、プロジェクトの<code>Res/MeshData</code>フォルダに保存しなさい。
 
-<code>https://github.com/tn-mai/OpenGL3D2023/tree/main/res/meshdata</code>
+<code>https://github.com/tn-mai/OpenGL3D2023/tree/main/res/meshdata/skull</code>
 
 OBJファイルを保存するには、ページ上部右側にある<code>Raw</code>ボタンを右クリックして「名前を付けてリンク先を保存」を選びます。
 </pre>
@@ -1608,8 +1608,8 @@ OBJファイルをダウンロードしたら、`Engine.cpp`を開き、`Initial
        static_cast<const uint16_t*>(e.indexData), e.indexSize);
    }
 +
-+  // OBJファイルをダウンロード
-+  meshBuffer->LoadOBJ("Res/MeshData/skull_highpoly.obj");
++  // OBJファイルを読み込む
++  meshBuffer->LoadOBJ("Res/MeshData/skull/skull_highpoly.obj");
 
    // ゲームオブジェクト配列の容量を予約
    gameObjects.reserve(1000);
@@ -1627,7 +1627,7 @@ OBJファイルをダウンロードしたら、`Engine.cpp`を開き、`Initial
 +  highpoly->position = startPoint + vec3{ 1, 0, 0 };
 +  highpoly->scale = { 2, 2, 2 };
 +  highpoly->rotation.y = -1.57f;
-+  highpoly->meshId = MeshId_skull_highpoly;
++  highpoly->staticMesh = engine.GetStaticMesh("Res/MeshData/skull/skull_highpoly.obj");
 +  highpoly->texColor = std::make_shared<Texture>("Res/MeshData/skull.tga");;
 +
 +  // 比較用の図形データ
