--- a/OpenGL3D_2023_09.md
+++ b/OpenGL3D_2023_09.md
@@ -813,6 +813,48 @@ float dot(float, float);
 <img src="images/09_result_0a.jpg" width="45%" /> <img src="images/09_result_0b.jpg" width="45%" />
 </p>
 
+OBJファイルから読み込んだ頭蓋骨のポリゴンが目立つのは、自動的に作られた法線を使っているからです。法線を持つOBJファイルならもっと自然に見えるようになります。
+
+<pre class="tnmai_assignment">
+<strong>【課題01】</strong>
+以下のURLから<code>skull_highpoly_with_normal.obj</code>というOBJファイルをダウンロードして、プロジェクトの<code>Res/MeshData</code>フォルダに保存しなさい。
+
+<code>https://github.com/tn-mai/OpenGL3D2023/tree/main/res/meshdata/skull</code>
+
+OBJファイルを保存するには、ページ上部右側にある<code>Raw</code>ボタンを右クリックして「名前を付けてリンク先を保存」を選びます。
+</pre>
+
+ダウンロードした`skull_highpoly_with_normal.obj`を読み込みます。`Engine.cpp`を開き、`Initialize`メンバ関数に次のプログラムを追加してください。
+
+```diff
+   // OBJファイルを読み込む
+   meshBuffer->LoadOBJ("Res/MeshData/skull_highpoly.obj");
++  meshBuffer->LoadOBJ("Res/MeshData/skull/skull_highpoly_with_normal.obj");
+
+   // ゲームオブジェクト配列の容量を予約
+   gameObjects.reserve(1000);
+```
+
+次に`MainGameScene.cpp`を開き、`Initialize`メンバ関数にあるスタティックメッシュの設定を次のように変更してください。
+
+```diff
+   highpoly->position = startPoint + vec3{ 1, 0, 0 };
+   highpoly->scale = { 2, 2, 2 };
+   highpoly->rotation.y = -1.57f;
+-  highpoly->staticMesh = engine.GetStaticMesh("Res/MeshData/skull/skull_highpoly.obj");
++  highpoly->staticMesh = engine.GetStaticMesh(
++    "Res/MeshData/skull/skull_highpoly_with_normal.obj");
+   highpoly->texColor = std::make_shared<Texture>("Res/MeshData/skull.tga");;
+
+   // 比較用の図形データ
+```
+
+プログラムが書けたらビルドして実行してください。頭蓋骨の陰影がなめらかになっていたら成功です。
+
+<p align="center">
+<img src="images/09_result_0b.jpg" width="45%" />
+</p>
+
 ### 1.8 ガンマ補正を行う
 
 ところで、もしライトが妙に暗いと感じていたら、その感覚は正しいです。実際に、現在の画面は物理的に正しい明るさになっていません。
