--- a/OpenGL3D_2023_06.md
+++ b/OpenGL3D_2023_06.md
@@ -1413,7 +1413,7 @@ UI用の板ポリゴンが隠れてしまう原因は、「ゲーム空間の図
    Engine* engine = nullptr;        // エンジンのアドレス
 ```
 
-### 3.2 ゲームオブジェクトをの描画を関数にする
+### 3.2 ゲームオブジェクトの描画を関数にする
 
 現在はすべてのゲームオブジェクトを一括描画しています。これを、ゲーム空間とUIを分けて描画できるようにします。描画処理を何度か実行することになるので、関数にしておきましょう。
 
