フォルダ整理のため頭蓋骨モデル専用フォルダを作る

--- a/OpenGL3D_2023_08.md
+++ b/OpenGL3D_2023_08.md
@@ -1594,7 +1594,8 @@ pair&lt;iterator, bool&gt; emplace(キー, データ);
 
 <pre class="tnmai_assignment">
 <strong>【課題05】</strong>
-以下のURLから<code>skull_highpoly.obj</code>(スカル・ハイポリ・オブジェ)というOBJファイルをダウンロードして、プロジェクトの<code>Res/MeshData</code>フォルダに保存しなさい。
+以下のURLから<code>skull_highpoly.obj</code>(スカル・ハイポリ・オブジェ)というOBJファイルをダウンロードして、
+プロジェクトの<code>Res/MeshData/skull</code>フォルダに保存しなさい(<code>skull</code>フォルダは作成すること)。
 
 <code>https://github.com/tn-mai/OpenGL3D2023/tree/main/res/meshdata/skull</code>
 
@@ -1627,7 +1628,8 @@ OBJファイルをダウンロードしたら、`Engine.cpp`を開き、`Initial
 +  highpoly->position = startPoint + vec3{ 1, 0, 0 };
 +  highpoly->scale = { 2, 2, 2 };
 +  highpoly->rotation.y = -1.57f;
-+  highpoly->staticMesh = engine.GetStaticMesh("Res/MeshData/skull/skull_highpoly.obj");
++  highpoly->staticMesh = engine.GetStaticMesh(
++    "Res/MeshData/skull/skull_highpoly.obj");
 +  highpoly->texColor = std::make_shared<Texture>("Res/MeshData/skull.tga");;
 +
 +  // 比較用の図形データ
