vec4乗算は未実装なので各要素の乗算に置き換える

--- a/OpenGL3D_2023_09.md
+++ b/OpenGL3D_2023_09.md
@@ -1638,7 +1638,10 @@ void assign(コピー元配列の先頭, コピー元配列の終端);
 +    if (e.materialNo >= 0 && e.materialNo < mesh.materials.size()) {
 +      const Material& material = *mesh.materials[e.materialNo];
 +      if (program) {
-+        const vec4 color = objectColor * material.baseColor;
++        const vec4 color = { objectColor.x * material.baseColor.x
++                             objectColor.y * material.baseColor.y,
++                             objectColor.z * material.baseColor.z,
++                             objectColor.w * material.baseColor.w };
 +        glProgramUniform4fv(program, 100, 1, &color.x);
 +      }
 +      if (material.texBaseColor) {
