progStandard3Dはprog3Dが正しい

--- a/OpenGL3D_2023_09.md
+++ b/OpenGL3D_2023_09.md
@@ -767,11 +767,11 @@ float dot(float, float);
    GameObjectList::iterator end)
  {
 +  // 点光源の情報を設定
-+  glProgramUniform3f(*progStandard3D, 101,
++  glProgramUniform3f(*prog3D, 101,
 +    pointLight.color.x * pointLight.intensity,
 +    pointLight.color.y * pointLight.intensity,
 +    pointLight.color.z * pointLight.intensity);
-+  glProgramUniform3f(*progStandard3D, 102,
++  glProgramUniform3f(*prog3D, 102,
 +    pointLight.position.x,
 +    pointLight.position.y,
 +    pointLight.position.z);
