--- a/OpenGL3D_2023_07.md
+++ b/OpenGL3D_2023_07.md
@@ -154,7 +154,7 @@ UIオブジェクトを作成するプログラムには、ゴール画像を作
 `std::pair`は「2つのテンプレート引数をメンバに持つ構造体」です。簡単な定義は次のようになります。
 
 >```C++
->template<typename T1, typenmae T2>
+>template<typename T1, typename T2>
 >struct pair {
 >  T1 first;
 >  T2 second;
