1章が長すぎるのでレバーとリモートドアの部分を別の章に分ける

--- a/OpenGL3D_2023_10.md
+++ b/OpenGL3D_2023_10.md
@@ -15,10 +15,8 @@
 
 プレイヤーにできることが「移動」だけというのは、2023年のゲームとしては「面白みに欠ける」と言われても仕方ないでしょう。そこで、クリックに反応する以下のオブジェクトを追加することにします。
 
-* ドア
-* レバー
-* ランタン(ろうそくなどの光源に風よけを付けて持ち歩けるようにしたもの。西洋式のちょうちん)。
-* 鍵
+* クリックで開くドア
+* レバーで開くドア
 
 まずは「クリックすると開くドア」を作ってみましょう。以下の課題を行って、プロジェクトに3Dモデルを追加してください。
 
@@ -448,7 +446,7 @@
  #endif // COLLISION_H_INCLUDED
 ```
 
-ある軸に垂直な2つの平面があるとき、その2平面の間の領域のことを「`Slab`(スラブ, 「厚板」という意味)」といいます。AABBは「X, Y, Zの3軸のスラブが交差したもの」と考えることができます。
+ある軸に垂直な2つの平面があるとき、その2平面の間の領域のことを「`Slab`(スラブ, 「厚板(あついた)」という意味)」といいます。AABBは「X, Y, Zの3軸のスラブが交差したもの」と考えることができます。
 
 AABBと光線が交差している場合、3つのスラブと光線の公差範囲には重なっている部分が存在します。そのため、AABBと光線の交差は3つのスラブとの交差判定を行い、共通の交差範囲を求めることで判定できます。
 
@@ -1017,7 +1015,17 @@ private:
 
 プログラムが書けたらビルドして実行してください。まず距離をおいてドアをクリックしてみてください。ドアは反応しないはずです。次に、ドアに少し近づいてクリックを繰り返してください。ある距離まで近づいてクリックしたとき、ドアが消えたら成功です。
 
-### 1.11 マップデータにオブジェクトを追加する
+>**【1章のまとめ】**
+>
+>* 
+>* 
+>* 
+
+<div style="page-break-after: always"></div>
+
+## 2. マップオブジェクト
+
+### 2.1 マップデータにオブジェクトを追加する
 
 次はレバーと連動して開くドアを作成しましょう。ただ、現在のマップデータには「連動するオブジェクト」を表現する方法がありません。そこで、マップデータにオブジェクトを定義する行を追加します。
 
@@ -1127,7 +1135,7 @@ private:
    auto floor = engine.Create<GameObject>("floor");
 ```
 
-### 1.12 マップオブジェクトの基底クラスを定義する
+### 2.2 マップオブジェクトの基底クラスを定義する
 
 続いて、読み込んだデータからマップオブジェクトを作成します。マップオブジェクトはコンポーネントとして定義することにします。
 
@@ -1209,7 +1217,7 @@ private:
 
 各マップオブジェクトは、`Action`仮想関数と`RemoteAction`仮想関数をオーバーライドすることで、種類ごとに独自の動作(「レバーを動かす」等)を実装します。メインゲームシーンは、クリックを検出したら`OnClick`メンバ関数を呼び出します。
 
-### 1.13 レバーコンポーネントを作成する
+### 2.3 レバーコンポーネントを作成する
 
 それではレバーコンポーネントを作成しましょう。名前は`SimpleLever`(シンプル・レバー)とします。プロジェクトの`Src`フォルダに`SimpleLever.h`という名前のヘッダファイルを追加してください。追加したファイルを開き、次のプログラムを追加してください。
 
@@ -1258,7 +1266,7 @@ private:
 +#endif // SIMPLELEVER_H_INCLUDED
 ```
 
-### 1.14 リモートドア・コンポーネントを作成する
+### 2.4 リモートドア・コンポーネントを作成する
 
 次に、リモートドア・コンポーネントを作成します。名前は`RemoteDoor`(リモート・ドア)とします。プロジェクトの`Src`フォルダに`RemoteDoor.h`という名前のヘッダファイルを追加してください。追加したファイルを開き、次のプログラムを追加してください。
 
@@ -1312,7 +1320,7 @@ private:
 
 `RemoteDoor`コンポーネントは、`RemoteAction`メンバ関数でドアを開けるように設定します。このコンポーネントを`SimplLever::AddRemoteObject`メンバ関数の引数に指定すると、ドアをリモート操作できるようになります。
 
-### 1.15 レバーとドアをゲーム空間に配置する
+### 2.5 レバーとドアをゲーム空間に配置する
 
 作成したコンポーネントを使って、ゲーム空間にレバーとリモートドアを配置しましょう。`MainGameScene.cpp`を開き、`SimpleLever.h`と`RemoteDoor.h`をインクルードしてください。
 
@@ -1400,7 +1408,7 @@ private:
 
 プログラムが書けたらビルドして実行してください。部屋の中にレバーが表示されていたら成功です。
 
-### 1.16 コンポーネントを検索できるようにする
+### 2.6 コンポーネントを検索できるようにする
 
 次に、レイが交差したゲームオブジェクトが`MapObject`コンポーネントを持っている場合、`MapObject`の`OnClick`メンバ関数を呼び出す処理を作成します。
 
@@ -1471,19 +1479,7 @@ private:
 
 プログラムが書けたらビルドして実行してください。レバーをクリックしたときにドアが消えたら成功です。
 
-### 1.17 X軸回転を追加する
-
->**【1章のまとめ】**
->
->* 
->* 
->* 
-
-<div style="page-break-after: always"></div>
-
-## 2. 
-
-### 2.1 
+### 2.7 X軸回転を追加する
 
 
 
