ライトとプレイヤーの位置を一致させる節を追加

--- a/OpenGL3D_2023_09.md
+++ b/OpenGL3D_2023_09.md
@@ -1093,6 +1093,43 @@ OBJファイルを保存するには、ページ上部右側にある<code>Raw</
 <img src="images/09_result_4b.jpg" width="45%" />
 </p>
 
+### 1.11 ライトをプレイヤーの位置に配置する
+
+最後に、プレイヤーが迷路を動き回れるように、ライトの位置をプレイヤーの座標に追従させます。`Engine.h`を開き、`Engine`クラスの定義に次のプログラムを追加してください。
+
+```diff
+   StaticMeshPtr GetStaticMesh(const char* name)
+   {
+     return meshBuffer->GetStaticMesh(name);
+   }
++
++  // ポイントライトの設定
++  const PointLight& GetPointLight() const { return pointLight; }
++  void SetPointLight(const PointLight& p) { pointLight = p; }
+
+ private:
+   // ワールド座標系のコライダーを表す構造体
+```
+
+次に`PlayerCompoonent.h`を開き、`Update`メンバ関数の定義に次のプログラムを追加してください。
+
+```diff
+     if (engine->GetKey(GLFW_KEY_Q)) {
+       camera.rotation.y += 2 * deltaTime;
+     }
++
++    // ライトの位置を設定
++    auto pointLight = engine->GetPointLight();
++    pointLight.position = camera.position;
++    engine->SetPointLight(pointLight);
+   }
+
+   // 衝突時の処理
+   virtual void OnCollision(
+```
+
+プログラムが書けたらビルドして実行してください。プレイヤーを移動させたとき、常にプレイヤーを中心として周囲が明るくなっていたら成功です。
+
 >**【1章のまとめ】**
 >
 >* OBJファイルの頂点には、頂点座標、テクスチャ座標、法線という最大3つのデータがある。
