画像追加. モデルのX軸回転を実装する節を追加

--- a/OpenGL3D_2023_10.md
+++ b/OpenGL3D_2023_10.md
@@ -27,6 +27,11 @@
 <code>https://github.com/tn-mai/OpenGL3D2023/tree/main/res/meshdata/obj/lever.zip</code>
 </pre>
 
+<p align="center">
+<img src="images/10_obj_door.png" width="20%" />&emsp;&emsp;<img src="images/10_obj_lever.png" width="14.75%" /><br>
+[左:ドア 右:レバー]
+</p>
+
 ドアモデルは「ドア本体」である`door.obj`と、「ドアの枠」に相当する`arch.obj`の2つから構成されます。レバーモデルは「レバー本体」である`lever_arm.obj`と基部に当たる`lever_cover.obj`の2つから構成されます。
 
 モデルが別れているのは、ドアやレバーを動かせるようにするためです。それでは、OBJファイルを読み込みましょう。`Engine.cpp`を開き、`Initialize`メンバ関数の定義に、OBJファイルを読み込むプログラムを追加してください。
@@ -80,6 +85,10 @@
 ```
 
 プログラムが書けたらビルドして実行してください。ドアが表示されていたら成功です。
+
+<p align="center">
+<img src="images/10_result_0.jpg" width="45%" /><br>
+</p>
 
 ### 1.2 円周率を定義する
 
@@ -230,6 +239,10 @@
 トリガーではない場合は、互いに重ならないようにオブジェクトの座標を調整します。また「スタティック指定」されているオブジェクトは衝突によって移動することはないので、「スタティックではないオブジェクト」だけを移動させています。
 
 プログラムが書けたらビルドして実行してください。ドアを通り抜けられなくなっていたら成功です。
+
+<p align="center">
+<img src="images/10_result_0.jpg" width="45%" /><br>
+</p>
 
 ### 1.4 vec3型に演算子オーバーロードを追加する
 
@@ -1015,6 +1028,10 @@ private:
 
 プログラムが書けたらビルドして実行してください。まず距離をおいてドアをクリックしてみてください。ドアは反応しないはずです。次に、ドアに少し近づいてクリックを繰り返してください。ある距離まで近づいてクリックしたとき、ドアが消えたら成功です。
 
+<p align="center">
+<img src="images/10_result_1.jpg" width="45%" /><br>
+</p>
+
 >**【1章のまとめ】**
 >
 >* 
@@ -1168,15 +1185,23 @@ private:
 +  virtual ~MapObject() = default;
 +
 +  /**
-+  * クリックされたときに呼び出される
++  * クリックされたときに呼び出される関数
 +  */
 +  void OnClick()
 +  {
 +    if (Action() == ActionResult::executeRemoteAction) {
-+      for (auto& e : remoteObjects) {
-+        e->RemoteAction(this);
-+      }
-+    } // if Action
++      InvokeRemoteAction();
++    }
++  }
++
++  /**
++  * 遠隔操作を実行する
++  */
++  void InvokeRemoteAction()
++  {
++    for (auto& e : remoteObjects) {
++      e->RemoteAction(this);
++    }
 +  }
 +
 +  /**
@@ -1253,13 +1278,6 @@ private:
 +    auto cover = engine->Create<GameObject>(
 +      owner->name, owner->position, owner->rotation);
 +    cover->staticMesh = engine->GetStaticMesh("Res/MeshData/lever/lever_cover.obj");
-+  }
-+
-+  // レバーを動かす
-+  virtual ActionResult Action() override
-+  {
-+    GetOwner()->rotation.y += radians(30);
-+    return ActionResult::executeRemoteAction;
 +  }
 +};
 +
@@ -1408,6 +1426,10 @@ private:
 
 プログラムが書けたらビルドして実行してください。部屋の中にレバーが表示されていたら成功です。
 
+<p align="center">
+<img src="images/10_result_2.jpg" width="45%" /><br>
+</p>
+
 ### 2.6 コンポーネントを検索できるようにする
 
 次に、レイが交差したゲームオブジェクトが`MapObject`コンポーネントを持っている場合、`MapObject`の`OnClick`メンバ関数を呼び出す処理を作成します。
@@ -1479,9 +1501,189 @@ private:
 
 プログラムが書けたらビルドして実行してください。レバーをクリックしたときにドアが消えたら成功です。
 
+<p align="center">
+<img src="images/10_result_3.jpg" width="45%" /><br>
+</p>
+
 ### 2.7 X軸回転を追加する
 
+クリックしたときに何もレバーが反応しないと、操作に成功したのかどうかがユーザーに伝わりません。そこで、レバーを傾けることで、操作できたことが分かるようにしましょう。
 
+現在、ゲームオブジェクトはY軸で回転させられるようになっています。しかし、Y軸回転ではレバーを傾ける向きに回転させることができません。レバーを傾けるには、ゲームオブジェクトをX軸やZ軸で回転できるようにする必要があります。
+
+まず、以下の手順でX軸の回転機能を追加します。
+
+1. 頂点シェーダに、X軸回転用のユニフォーム変数を追加する
+2. 頂点シェーダに、ベクトル(座標や法線)をX軸とY軸で回転させる関数を追加する。
+3. 頂点シェーダの頂点座標と法線を回転させるプログラムを、2で作成した関数で置き換える。
+4. X軸回転用のsin,cosをGPUメモリにコピーするプログラムを追加する。
+
+それでは、ユニフォーム変数を追加するところから始めましょう。`standard.vert`を開き、プログラムからの入力変数を定義するプログラムを次のように変更してください。
+
+```diff
+ // プログラムからの入力
+ layout(location=0) uniform vec3 scale; // 拡大率
+ layout(location=1) uniform vec3 position; // 位置
+-layout(location=2) uniform vec2 sinCosY;  // Y軸回転
++layout(location=2) uniform vec4 sinCosXY;  // X,Y軸回転
+
+ // アスペクト比と視野角による拡大率
+ layout(location=3) uniform vec2 aspectRatioAndScaleFov;
+ ```
+
+このプログラムでは、 ロケーション番号の消費を避けるため、X軸回転とY軸回転の変数を一つの`vec4`型にまとめています。
+
+次に、ベクトルを回転させる関数を定義します。今回追加する「X軸回転」は、数学における「XY平面」上の回転の公式を、「ZY平面」に変換することで得られます。XY平面の回転は以下の公式で求められるのでした。
+
+>```txt
+>x' = x * cosθ - y * sinθ
+>y' = x * sinθ + y * cosθ
+>```
+
+X軸回転は「ZY平面」上の回転なので、上の式の`x`および`x'`を、`-z`および`-z'`に置き換えます。マイナスになるのは、OpenGLのZ軸と数学のX軸では向きが逆だからです。結果として以下の式が得られます。
+
+>```txt
+>-z' = -z * cosθ - y * sinθ
+>y' = -z * sinθ + y * cosθ
+>```
+
+`-z'`を`z'`にするために、Z座標を求める式の両辺に`-1`を掛けます。すると、以下の式が得られます。
+
+>```txt
+>z' = z * cosθ + y * sinθ
+>y' = -z * sinθ + y * cosθ
+>```
+
+これが「OpenGLにおけるZY平面上の回転の公式」です。
+
+それでは、回転を行う関数を定義しましょう。関数名は`RotateXY`(ローテート・エックス・ワイ、「X, Yの順に回転させる」という意味)とします。カメラ用のユニフォーム変数の定義の下に、次のプログラムを追加してください。
+
+ ```diff
+ layout(location=4) uniform vec3 cameraPosition; // カメラの位置
+ layout(location=5) uniform vec2 cameraSinCosY;  // カメラのY軸回転
++
++/**
++* ベクトルを回転させる
++*
++* @param v       回転させるベクトル
++* @param sinCosX X軸回転に使用するsinとcosの値
++* @param sinCosY Y軸回転に使用するsinとcosの値
++*
++* @return ベクトルvを、X軸->Y軸の順番で回転させたベクトル
++*/
++vec3 RotateXY(vec3 v, vec2 sinCosX, vec2 sinCosY)
++{
++  // X軸回転
++  v.zy = vec2(
++    v.z * sinCosX.y + v.y * sinCosX.x,
++    -v.z * sinCosX.x + v.y * sinCosX.y);
++
++  // Y軸回転
++  v.xz = vec2(
++    v.x * sinCosY.y + v.z * sinCosY.x,
++    -v.x * sinCosY.x + v.z * sinCosY.y);
++
++  return v;
++}
+
+ void main()
+ {
+```
+
+続いて、`RotateXY`関数を使って、頂点座標と法線を回転させるプログラムを置き換えましょう。頂点座標と法線をローカル座標系からワールド座標系へ変換するプログラムを、次のように変更してください。
+
+```diff
+   // ローカル座標系からワールド座標系に変換
+   vec3 pos = inPosition * scale;
+-  float sinY = sinCosY.x;
+-  float cosY = sinCosY.y;
+-  gl_Position.x = pos.x * cosY + pos.z * sinY;
+-  gl_Position.y = pos.y;
+-  gl_Position.z = pos.x * -sinY + pos.z * cosY;
++  gl_Position.xyz = RotateXY(pos, sinCosXY.xy, sinCosXY.zw);
+   gl_Position.xyz += position;
+
+   outPosition = gl_Position.xyz;
+
+   // ワールド法線を計算
+-  outNormal = vec3(inNormal.x * cosY + inNormal.z * sinY,
+-                   inNormal.y,
+-                   inNormal.x * -sinY + inNormal.z * cosY);
++  outNormal = RotateXY(inNormal, sinCosXY.xy, sinCosXY.zw);
+
+  // ワールド座標系からビュー座標系に変換
+  pos = gl_Position.xyz - cameraPosition;
+```
+
+これで、3DモデルのX軸回転をシェーダ・プログラムで実行できるようになりました。
+
+最後に、C++プログラム側をX軸回転の情報をGPUメモリコピーするように変更します。`Engine.cpp`を開き、`DrawGameObject`メンバ関数の定義にある「ユニフォーム変数にデータをコピー」するプログラムを、次のように変更してください。
+
+```diff
+     glProgramUniform4fv(prog3D, 100, 1, e->color);
+     glProgramUniform3fv(prog3D, 0, 1, &e->scale.x);
+     glProgramUniform3fv(prog3D, 1, 1, &e->position.x);
+-    glProgramUniform2f(prog3D, 2, sin(e->rotation.y), cos(e->rotation.y));
++    glProgramUniform4f(prog3D, 2,
++      sin(e->rotation.x), cos(e->rotation.x),
++      sin(e->rotation.y), cos(e->rotation.y));
+
+     // 描画に使うテクスチャを指定
+     if (e->texColor) {
+```
+
+これで、ゲームオブジェクトのX軸回転が、実際の描画に反映されるようになりました。
+
+### 2.8 レバーをX軸回転させる
+
+X軸回転を利用してレバーを回転させましょう。`SimpleLever.h`を開き、`SimpleLever`クラスの定義に次のプログラムを追加してください。
+
+```diff
+       owner->name, owner->position, owner->rotation);
+     cover->staticMesh = engine->GetStaticMesh("Res/MeshData/lever/lever_cover.obj");
+   }
++
++  // レバー状態の更新
++  virtual void Update(float deltaTime) override
++  {
++    // レバーを目標回転角に向かって回転させる
++    if (currentTime < endTime) {
++      currentTime += deltaTime;
++      if (currentTime >= endTime) {
++        currentTime = endTime;
++      }
++      const float t = currentTime / endTime;
++      GetOwner()->rotation.x = startRotX + (endRotX - startRotX) * t;
++    }
++  }
++
++  // レバーがクリックされたときに実行される関数
++  virtual ActionResult Action() override
++  {
++    // レバーの回転を設定
++    startRotX = GetOwner()->rotation.x;
++    endRotX = radians(60);
++    currentTime = 0;
++    endTime = 1.0f;
++
++    return ActionResult::executeRemoteAction;
++  }
++
++private:
++  float startRotX = 0;   // レバーの回転開始角度
++  float endRotX = 0;     // レバーの回転終了角度
++  float currentTime = 0; // 回転の経過時間
++  float endTime = 0;     // レバーの回転終了時間
+ };
+
+ #endif // SIMPLELEVER_H_INCLUDED
+```
+
+プログラムが書けたらビルドして実行してください。レバーをクリックしたとき、レバーが回転して斜めになったら成功です。
+
+<p align="center">
+<img src="images/10_result_4.jpg" width="45%" /><br>
+</p>
 
 >**【2章のまとめ】**
 >
