習得目標を書く

--- a/OpenGL3D_2023_09.md
+++ b/OpenGL3D_2023_09.md
@@ -4,10 +4,11 @@
 
 ## 習得目標
 
-* 
-* 
-* 
-* 
+*  OBJファイルの頂点を構成する3つのデータと用途を説明できる。
+* 「法線」の定義について説明できる。
+* 「ランバート反射」を表す式を書くことができる。
+* 点光源からの距離と明るさの関係を表す式を書くことができる。
+* MTLファイルに格納されているデータの種類をいくつか挙げることができる。
 
 ## 1. 法線とライティング
 
@@ -1768,5 +1769,6 @@ PNGファイルはTGAファイルに変換すること。
 >**【2章のまとめ】**
 >
 >* OBJファイルで使用するテクスチャや色などの物体の質感(マテリアル)は、MTLファイルに定義されている。
+>* MTLファイルには、拡散色を表す`Kd`や拡散色テクスチャを表す`map_Kd`などの専用の構文がある。
 >* 複数のマテリアルを使用するOBJファイルでは、`usemtl`構文によって、以降の`f`構文で使用するマテリアルを指定する。
->* マテリアルを図形データに反映するには、マテリアルが切り替わる部分で新しい描画パラメータを作成する。
+>* マテリアルを図形データに反映するには、`usemtl`に囲まれた各範囲に対して個別に描画パラメータを作成する。
