2章のタイトルを少し明確にする

--- a/OpenGL3D_2023_10.md
+++ b/OpenGL3D_2023_10.md
@@ -1040,11 +1040,11 @@ private:
 
 <div style="page-break-after: always"></div>
 
-## 2. マップオブジェクト
+## 2. 複数のオブジェクトの連動
 
-### 2.1 マップデータにオブジェクトを追加する
+### 2.1 マップデータに特別なオブジェクトを追加する
 
-次はレバーと連動して開くドアを作成しましょう。ただ、現在のマップデータには「連動するオブジェクト」を表現する方法がありません。そこで、マップデータにオブジェクトを定義する行を追加します。
+次はレバーと連動して開くドアを作成しましょう。しかし、現在のマップデータには「連動するオブジェクト」を表現する方法がありません。そこで、マップデータにオブジェクトを定義する行を追加します。
 
 オブジェクト定義行には以下のデータを含めることにします。
 
