ドアモデルを作成する課題を追加

--- a/OpenGL3D_2023_11.md
+++ b/OpenGL3D_2023_11.md
@@ -446,6 +446,11 @@ UnityにはTGAに変換する関数も用意されているため、ファイル
 床と同じ方法で「天井」のOBJファイルを作成し、ゲーム画面に表示しなさい。
 </pre>
 
+<pre class="tnmai_assignment">
+<strong>【課題07】</strong>
+壁と床の作成方法を参考にして「ドア」のOBJファイルを作成し、現在ゲーム中で使われている「石のアーチ」と「木のドア」を、作成したOBJファイルで置き換えなさい。
+</pre>
+
 >**【1章のまとめ】**
 >
 >* アセットをOBJ形式に変換するには、OBJ変換アセットを使うか、Blender, Visual Studio等にFBXを読み込んで変換する。
