--- a/OpenGL3D_2023_08.md
+++ b/OpenGL3D_2023_08.md
@@ -1084,7 +1084,7 @@ unordered_map&lt;キーの型, データの型&gt;
   const DrawParams& GetDrawParams(size_t index) const
 ```
 
-続いて`GetStaticmesh`メンバ関数の定義を作成します。`MeshBuffer.cpp`を開き、
+続いて`GetStaticmesh`メンバ関数の定義を作成します。`Mesh.cpp`を開き、
 `Clear`メンバ関数の定義の下に、次のプログラムを追加してください。
 
 ```diff
@@ -1118,7 +1118,7 @@ iterator unordered_map::find(検索するキー);
 
 ### 2.5 OBJファイルを読み込む関数を定義する
 
-次に、OBJファイルを読み込む機能を追加します。`MeshBuffer.h`を開き、`MeshBuffer`クラスの定義に次のプログラムを追加してください。
+次に、OBJファイルを読み込む機能を追加します。`Mesh.h`を開き、`MeshBuffer`クラスの定義に次のプログラムを追加してください。
 
 ```diff
    // コピーと代入を禁止
