utilityヘッダをインクルードしていないのでstd::swapを手動でスワップするコードに置き換える

--- a/OpenGL3D_2023_10.md
+++ b/OpenGL3D_2023_10.md
@@ -563,7 +563,9 @@ AABBと光線が交差している場合、3つのスラブと光線の公差範
 +
 +  // 時刻の早い側を開始時刻とする
 +  if (t0 > t1) {
-+    std::swap(t0, t1);
++    const float tmp = t0;
++    t0 = t1;
++    t1 = tmp;
 +  }
 +
 +  // 共通の公差範囲を求める
