FLT_MAXとstd::swapのためにalgorithmをインクルードするコードを追加

--- a/OpenGL3D_2023_10.md
+++ b/OpenGL3D_2023_10.md
@@ -528,7 +528,19 @@ AABBと光線が交差している場合、3つのスラブと光線の公差範
 
 ただし、光線とスラブが平行な場合、軸成分が0になるため時間を求めることができません。この場合は「発射点がスラブ内にあるかどうか」で判定します。
 
-それでは、スラブと光線の交差判定を行う関数を定義しましょう。関数名は`IntersectSlab`(インターセクト・スラブ, 「スラブの交差」という意味)」とします。`Collision.cpp`を開き、AABB同士の`Intersect`関数の定義の下に、次のプログラムを追加してください。
+それでは、スラブと光線の交差判定を行う関数を定義しましょう。まず必要なヘッダファイルをインクルードします。`Collision.cpp`を開き、`algorithm`(アルゴリズム)ヘッダをインクルードしてください。
+
+```diff
+ * @file Collision.cpp
+ */
+ #include "Collision.h"
++#include <algorithm>
+
+ /**
+ * AABB同士の交差判定
+```
+
+関数名は`IntersectSlab`(インターセクト・スラブ, 「スラブの交差」という意味)」とします。AABB同士の`Intersect`関数の定義の下に、次のプログラムを追加してください。
 
 ```diff
    penetration = { 0, 0, signedLength.z };
@@ -563,9 +575,7 @@ AABBと光線が交差している場合、3つのスラブと光線の公差範
 +
 +  // 時刻の早い側を開始時刻とする
 +  if (t0 > t1) {
-+    const float tmp = t0;
-+    t0 = t1;
-+    t1 = tmp;
++    std::swap(t0, t1);
 +  }
 +
 +  // 共通の公差範囲を求める
